// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Featured Link Default smoke-test 1`] = `
<a href="#"
   class="font-sans font-bold block group/featured-link text-gui-default hover:text-gui-hover focus:text-gui-focus focus:outline-none focus-visible:outline-gui-focus py-2 ui-text-p2"
   style="--featured-link-icon-size: var(--fs-p2);"
>
  Featured link
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       data-slot="icon"
       class="align-middle ml-2 relative -top-px -left-1 transition-[left] group-hover/featured-link:left-0"
       style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
    >
    </path>
  </svg>
</a>
`;

exports[`Components/Featured Link Disabled smoke-test 1`] = `
<a href="#"
   class="font-sans font-bold block group/featured-link text-gui-unavailable pointer-events-none py-2 ui-text-p2"
   style="--featured-link-icon-size: var(--fs-p2);"
>
  Featured link
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       data-slot="icon"
       class="align-middle ml-2 relative -top-px -left-1 transition-[left]"
       style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
    >
    </path>
  </svg>
</a>
`;

exports[`Components/Featured Link Large smoke-test 1`] = `
<a href="#"
   class="font-sans font-bold block group/featured-link text-gui-default hover:text-gui-hover focus:text-gui-focus focus:outline-none focus-visible:outline-gui-focus py-2 ui-text-p1"
   style="--featured-link-icon-size: var(--fs-p1);"
>
  Featured link
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       data-slot="icon"
       class="align-middle ml-2 relative -top-px -left-1 transition-[left] group-hover/featured-link:left-0"
       style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
    >
    </path>
  </svg>
</a>
`;

exports[`Components/Featured Link Pink smoke-test 1`] = `
<a href="#"
   class="font-sans font-bold block group/featured-link hover:text-gui-hover focus:text-gui-focus focus:outline-none focus-visible:outline-gui-focus py-2 ui-text-p2 text-pink-800"
   style="--featured-link-icon-size: var(--fs-p2);"
>
  Featured link
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       data-slot="icon"
       class="text-pink-500 align-middle ml-2 relative -top-px -left-1 transition-[left] group-hover/featured-link:left-0"
       style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
    >
    </path>
  </svg>
</a>
`;

exports[`Components/Featured Link Reverse smoke-test 1`] = `
<a href="#"
   class="font-sans font-bold block group/featured-link text-gui-default hover:text-gui-hover focus:text-gui-focus focus:outline-none focus-visible:outline-gui-focus py-2 ui-text-p2"
   style="--featured-link-icon-size: var(--fs-p2);"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       data-slot="icon"
       class="align-middle mr-2 relative -top-px -right-1 transition-[right] transform rotate-180 group-hover/featured-link:right-0"
       style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
    >
    </path>
  </svg>
  Featured link
</a>
`;

exports[`Components/Featured Link Small smoke-test 1`] = `
<a href="#"
   class="font-sans font-bold block group/featured-link text-gui-default hover:text-gui-hover focus:text-gui-focus focus:outline-none focus-visible:outline-gui-focus py-2 ui-text-p3"
   style="--featured-link-icon-size: var(--fs-p3);"
>
  Featured link
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       data-slot="icon"
       class="align-middle ml-2 relative -top-px -left-1 transition-[left] group-hover/featured-link:left-0"
       style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
    >
    </path>
  </svg>
</a>
`;
